--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet" />
+    <script src="./JS/script.js"></script>
   </head>
   <body>
     <header>
@@ -58,6 +59,15 @@
             ultricies vehicula ut id elit.
           </p>
           <button class="sec1-btn">Browse Gallery</button>
+        </div>
+        <div class="arrow-container">
+          <div class="arrow arrow-left">&larr;</div>
+          <div class="arrow arrow-right">&rarr;</div>
+        </div>
+        <div class="line-container">
+          <div class="line"></div>
+          <div class="line"></div>
+          <div class="line"></div>
         </div>
       </section>
 
