--- a/index.html
+++ b/index.html
@@ -1,38 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1" >
     <title>Assignment 2</title>
-    <meta name="description" content="This is assignment 2 for IFD/CSS" />
-    <meta name="robots" content="noindex, nofollow" />
-    <link rel="stylesheet" href="./CSS/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <meta name="description" content="This is assignment 2 for IFD/CSS" >
+    <meta name="robots" content="noindex, nofollow" >
+    <link rel="stylesheet" href="./CSS/style.css" >
+    <link rel="preconnect" href="https://fonts.googleapis.com" >
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
-      rel="stylesheet" />
+      rel="stylesheet">
     <script src="./JS/script.js"></script>
   </head>
   <body>
     <header>
       <div>
         <nav>
-          <menu>
-            <h2>Carousel</h2>
-            <ul class="menu-items">
+          <menu class="menu-items">
+              <li><a href="index.html">Carousel</a></li>
               <li><a href="index.html">Home</a></li>
               <li><a href="index.html">Link</a></li>
               <li><a href="index.html">Disabled</a></li>
               <li id="search-item">
                 <input
-                  id="search-input"
-                  type="search"
-                  placeholder="Search"
-                />
+                  id = "search-input"
+                  type = "search"
+                  placeholder = "Search"
+                >
                 <button>Search</button>
               </li>
-            </ul>
           </menu>
         </nav>
       </div>
@@ -84,7 +82,7 @@
 
       <section id="circle-images">
         <div class="column-text">
-          <img src="./img/giga-chad.jpg" alt="Absolute Chad" class="sec2-img" />
+          <img src="./img/giga-chad.jpg" alt="Absolute Chad" class="sec2-img" >
           <h3>Heading</h3>
           <p>
             Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod.
@@ -95,7 +93,7 @@
           <button class="sec2-btn">View Details >></button>
         </div>
         <div class="column-text">
-          <img src="./img/giga-chad.jpg" alt="Absolute Chad" class="sec2-img" />
+          <img src="./img/giga-chad.jpg" alt="Absolute Chad" class="sec2-img" >
           <h3>Heading</h3>
           <p>
             Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod.
@@ -106,7 +104,7 @@
           <button class="sec2-btn">View Details >></button>
         </div>
         <div class="column-text">
-          <img src="./img/giga-chad.jpg" alt="Absolute Chad" class="sec2-img" />
+          <img src="./img/giga-chad.jpg" alt="Absolute Chad" class="sec2-img" >
           <h3>Heading</h3>
           <p>
             Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod.
@@ -123,7 +121,7 @@
           <div class="txt">
             <h2>
               First featurette heading.
-              <span class="light">It'll <br />blow your mind.</span>
+              <span class="light">It'll <br >blow your mind.</span>
             </h2>
             <p>
               Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id
@@ -132,15 +130,15 @@
               commodo.
             </p>
           </div>
-          <img src="./img/giga-chad.jpg" alt="Absolute Chad" class="sec3-img" />
+          <img src="./img/giga-chad.jpg" alt="Absolute Chad" class="sec3-img" >
         </div>
         <div class="block-text" id="reverse">
-          <img src="./img/giga-chad.jpg" alt="Absolute Chad" class="sec3-img" />
+          <img src="./img/giga-chad.jpg" alt="Absolute Chad" class="sec3-img" >
           <div class="txt">
             <h2>
               Oh yeah, it's that good.
               <span class="light"
-                >See<br />
+                >See<br >
                 for yourself.</span
               >
             </h2>
@@ -155,7 +153,7 @@
         <div class="block-text">
           <div class="txt">
             <h2>
-              And lastly, this one.<br />
+              And lastly, this one.<br >
               <span class="light">Checkmate.</span>
             </h2>
             <p>
@@ -165,7 +163,7 @@
               commodo.
             </p>
           </div>
-          <img src="./img/giga-chad.jpg" alt="Absolute Chad" class="sec3-img" />
+          <img src="./img/giga-chad.jpg" alt="Absolute Chad" class="sec3-img" >
         </div>
       </section>
     </main>
