--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   <body>
     <header>
       <div>
+        <h2>Carousel</h2>
         <nav>
           <menu class="menu-items">
-              <li><a href="index.html">Carousel</a></li>
               <li><a href="index.html">Home</a></li>
               <li><a href="index.html">Link</a></li>
               <li><a href="index.html">Disabled</a></li>
